--- a/html-projects/survey-form/src/style.css
+++ b/html-projects/survey-form/src/style.css
@@ -1,96 +1,106 @@
-header {
-  min-width: 270px;
-  max-width: 600px;
-  width: 90vw;
-  margin: auto;
+
+html {
+  font-family: Alatsi, arial;
+  background: linear-gradient(135deg, hsl(162, 100%, 67%), hsl(221, 100%, 80%));
+  line-height: 1.5;
   text-align: center;
-  padding-top: 5px;
-  padding-bottom: 40px;
 }
 
+body {
+  box-sizing: border-box;
+  min-width: 320px;
+  padding: 0 1%;
+  margin: 0;
+}
+
+header, footer {
+  margin: 2em 0;
+}
+
+/* The main form area. */
 main {
-  background-color: rgba(0, 0, 0, 0.07);
-  border-radius: 5px;
-  box-shadow: 4px 4px 4px 0 hsl(0, 0%, 80%);
-  min-width: 270px;
   max-width: 600px;
-  width: 90vw;
   margin: auto;
+  padding: 0.7em 1em 1em;
+  background-color: rgba(0, 0, 0, 0.07);
+  border-radius: 0.8em;
   text-align: left;
-  padding: 8px 8px 20px 8px;
+}
+
+/* A section contains a single survey question and its inputs. */
+section {
+  margin-bottom: 2em;
+}
+
+section p {
+  margin: 0 0 0.3em;
 }
 
 input, select, textarea {
-  margin: 5px 3px 5px 7px;
+  font-family: Alatsi, arial;
+  padding: 2px;
 }
 
-label {
-  margin-left: 7px;
+input, select {
+  font-size: 0.85em;
+}
+
+input[type="text"], input[type="email"] {
+  width: 12em;
+}
+
+input[type="number"] {
+  width: 5em;
+}
+
+input[type="radio"], input[type="checkbox"] {
+  margin: 0 0.5em;
 }
 
 textarea {
-  width: 97%;
-  height: 100px;
-}
-
-.text {
-  font-family: Alatsi, arial;
-}
-
-#background {
-  background: linear-gradient(
-    135deg, hsl(162, 100%, 67%), hsl(221, 100%, 68%)
-);
-  padding-bottom: 40px;
-}
-
-#submit {
-  background: hsl(162, 70%, 55%);
-  display: block;
-  margin: 4vh auto;
-  padding: 10px 15px;
   font-size: 1em;
+  box-sizing: border-box;
+  width: 100%;
+  height: 7em;
+  margin-top: 0.2em;
 }
 
-#submit:hover {
-  animation-name: hover;
-  animation-duration: 400ms;
-  animation-fill-mode: forwards;
+button {
+  font-family: Alatsi, arial;
+  font-size: 1em;
+  display: block;
+  margin: 3em auto 2em;
+  padding: 0.6em 2em;
+  background-color: hsl(197deg 71% 80%);
+  border: 0.2em hsl(197deg 71% 85%) outset;
+  border-radius: 0.4em;
 }
 
-@keyframes hover {
-  100% {
-    background: hsl(162, 70%, 80%);
-  }
+button:hover {
+  background-color: hsl(195deg 53% 86%);
+  border-color: hsl(195deg 53% 91%);
+}
+
+button:active {
+  border-style: inset;
 }
 
 /*************************
  ***   Media Queries   ***
  *************************/
 
-@media (min-width: 1921px) {
-  header, main {
-    font-size: 1.2em;
-  }
-}
-
-@media (max-width: 1920px) {
-  header, main {
+@media (min-width: 1440px) {
+  html {
     font-size: 1.1em;
   }
-}
 
-@media (max-width: 1440px) {
-  header, main {
-    font-size: 1em;
+  input, select, textarea {
+    padding: 3px;
   }
 }
 
-@media (max-width: 500px) {
-  header, main {
-    width: auto;
-  }
-  textarea {
-    width: 95%;
+@media (min-width: 1920px) {
+  html {
+    font-size: 1.2em;
   }
 }
