--- a/portfolio/src/style.css
+++ b/portfolio/src/style.css
@@ -11,7 +11,6 @@
 
 html {
   font-family: Russo One, arial;
-  font-size: 16px;
   color: black;
   background: repeating-linear-gradient(160deg,
     var(--background-green) 0px,
@@ -37,6 +36,7 @@ nav {
   border: var(--border);
   display: flex;
   justify-content: flex-end;
+  flex-wrap: wrap;
 }
 
 /* Individual elements in the navbar. */
@@ -48,17 +48,34 @@ a.navlink {
   padding: 1.2rem;
 }
 
-a.navlink:hover {
+a.navlink:hover,
+a.navlink:focus {
   background-color: hsl(208, 100%, 91%);
 }
 
+/* Keyboard focus for all elements. */
+:focus {
+  z-index: 1;
+  outline: medium dotted black;
+}
+
+/* Remove mouse focus if :focus-visible is supported. */
+:focus:not(:focus-visible) {
+  outline: none;
+}
+
+/* Polyfill for :focus-visible. */
+.js-focus-visible :focus:not(.focus-visible) {
+  outline: none;
+}
+
 /* The <div> containing the dropdown menu and button. */
-div.drop-down-container {
+.drop-down-container {
   position: relative;
 }
 
 /* The <div> containing the actual dropdown menu. */
-div.drop-down-menu {
+.drop-down-menu {
   position: absolute;
   width: 100%;
   text-align: start;
@@ -68,8 +85,9 @@ div.drop-down-menu {
   display: none;
 }
 
-/* Toggle dropdown menu display on hover. */
-div.drop-down-container:hover div.drop-down-menu {
+/* Toggle dropdown menu display on hover and keyboard focus. */
+.drop-down-container:hover .drop-down-menu,
+.drop-down-container:focus-within .drop-down-menu {
   display: block;
 }
 
@@ -172,18 +190,32 @@ div.info-tile ul li {
 /* Grid tile containing the project link. */
 div.link-tile {
   align-self: center;
-  background-color: black;
-  box-shadow: 0.2rem 0.2rem 0.2rem 0 slategray;
-  border-radius: 3%;
-}
-
-div.link-tile:hover {
-  background-color: hsl(0, 0%, 22%);
 }
 
 /* The <a> element in a link tile. */
 div.link-tile a {
+  --background: black;
+
+  display: block;
   color: lightblue;
+  background-color: var(--background);
+  box-shadow: 0.2rem 0.2rem 0.2rem 0 slategray;
+  border-radius: 3%;
+}
+
+div.link-tile a:hover,
+div.link-tile a:focus {
+  background-color: hsl(0, 0%, 25%);
+}
+
+/* Remove mouse focus if :focus-visible is supported. */
+div.link-tile a:focus:not(:focus-visible):not(:hover) {
+  background-color: var(--background);
+}
+
+/* Polyfill for :focus-visible. */
+.js-focus-visible div.link-tile a:focus:not(.focus-visible):not(:hover) {
+  background-color: var(--background);
 }
 
 /* The <img> element in a link tile. */
@@ -225,11 +257,23 @@ div#footer-links {
 }
 
 a.footer-link {
-  color: black;
+  --color: black;
+  color: var(--color);
 }
 
-a.footer-link:hover {
+a.footer-link:hover,
+a.footer-link:focus {
   color: gray;
+}
+
+/* Remove mouse focus if :focus-visible is supported. */
+a.footer-link:focus:not(:focus-visible):not(:hover) {
+  color: var(--color);
+}
+
+/* Polyfill for :focus-visible. */
+.js-focus-visible a.footer-link:focus:not(.focus-visible):not(:hover) {
+  color: var(--color);
 }
 
 /*************************
